Changes for 1.7
* Created new unit attachment property, "canAirBattle", which determines if a unit participates in a normal battle's air battle. (veqryn)

* Allowing defense to ground their planes before an air battle (preceding a normal battle) if withdrawing is turned on, however if the territory is lost they die. (veqryn)

* Fixed battle screen null pointer errors caused by maps with artillery units but no supportable units. Also fixed bug where maps without notes could not be closed. (veqryn)

* Allowed AA Gun type units to fire back in same round if killed by other AA Gun type units. (veqryn)

* Added new steps to must fight battle so that offensive aa guns will work correctly. (veqryn)

* Created new unit attachment properties, "offensiveAttackAA" and "offensiveAttackAAmaxDieSides", which will be used by offensive aa guns. (veqryn)

* Created new unit attachment property, "maxRoundsAA", which sets the number of rounds an AA gun may fire in, with 1 being default. Only normal battles are affected, while flyover and strategic bombing are not affected. (veqryn)

* Created new game option property, "Battle Rounds", which sets the maximum number of rounds of combat for normal battles, with -1 being infinite which is default. (veqryn)

* Created new game option property, "Can Scramble Into Air Battles", which will allow a player to scramble air to neighboring territories in order to defend against air raids and air battles. (veqryn)

* Set up battle delegate and tracker to allow air battles to be created for normal battles. (veqryn)

* Created new game option property, "Battles May Be Preceeded By Air Battles", which will allow normal battles to have air battles first. (veqryn)

* Created new game option properties, "Air Battle Attackers Can Retreat" and "Air Battle Defenders Can Retreat", which allow retreating from air battles. (veqryn)
